@@ -1,5 +1,5 @@
 /*
- * Copyright 2002-2007 the original author or authors.
+ * Copyright 2002-2010 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -382,7 +382,7 @@ public class WebSphereUowTransactionManagerTests extends TestCase {
 		assertEquals(0, manager.getUOWTimeout());
 		assertEquals(UOWManager.UOW_TYPE_GLOBAL_TRANSACTION, manager.getUOWType());
 		assertFalse(manager.getJoined());
-		assertFalse(manager.getRollbackOnly());
+		assertTrue(manager.getRollbackOnly());
 	}
 
 	public void testNewTransactionWithRollbackOnly() {
